--- a/Layouts/tech.xml
+++ b/Layouts/tech.xml
@@ -1670,8 +1670,8 @@
                         <x>1999</x>
                         <y>329</y>
                         <z>0</z>
-                        <width>143</width>
-                        <height>22</height>
+                        <width>73.216003418</width>
+                        <height>12.13793087</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -1730,8 +1730,8 @@
                         <x>2815</x>
                         <y>323</y>
                         <z>0</z>
-                        <width>143</width>
-                        <height>22</height>
+                        <width>73.216003418</width>
+                        <height>12.13793087</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -1790,8 +1790,8 @@
                         <x>1839</x>
                         <y>624</y>
                         <z>0</z>
-                        <width>143</width>
-                        <height>22</height>
+                        <width>73.216003418</width>
+                        <height>12.13793087</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
